--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 'Google Inc.:Google APIs:23'
     buildToolsVersion '23.0.2'
     defaultConfig {
-        applicationId "com.digitale.leaguereporter"
+        applicationId "com.digitale.WoWpaper"
         minSdkVersion 10
         targetSdkVersion 23
         versionCode 1
