--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,23 @@
             android:name="com.digitale.wowpaper.SplashActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait" />
-
+        <service
+            android:name=".WoWWallpaperService"
+            android:enabled="true"
+            android:label="WoW Wallpaper"
+            android:permission="android.permission.BIND_WALLPAPER" >
+            <intent-filter>
+                <action android:name="android.service.wallpaper.WallpaperService"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.service.wallpaper"
+                android:resource="@xml/wallpaper" >
+            </meta-data>
+            <uses-feature
+                android:name="android.software.live_wallpaper"
+                android:required="true" >
+            </uses-feature>
+        </service>
     </application>
 
 </manifest>
