--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,9 @@ android {
     productFlavors {
     }
 }
-
+repositories {
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -39,6 +41,8 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    compile 'org.lucasr.twowayview:core:1.0.0-SNAPSHOT@aar'
+    compile 'org.lucasr.twowayview:layouts:1.0.0-SNAPSHOT@aar'
     compile files('libs/mpandroidchartlibrary-2-1-6.jar'
     )
 }
