--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 'Google Inc.:Google APIs:23'
     buildToolsVersion '23.0.2'
     defaultConfig {
-        applicationId "com.digitale.WoWpaper"
+        applicationId "com.digitale.wowpaper"
         minSdkVersion 11
         targetSdkVersion 23
         versionCode 1
@@ -18,6 +18,13 @@ android {
         }
     }
     productFlavors {
+        flavorTestConfig {
+            minSdkVersion 18
+            applicationId 'com.digitale.wowpaper'
+            targetSdkVersion 23
+            versionCode 1
+            versionName '1.0'
+        }
     }
 }
 repositories {
@@ -43,6 +50,5 @@ dependencies {
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'org.lucasr.twowayview:core:1.0.0-SNAPSHOT@aar'
     compile 'org.lucasr.twowayview:layouts:1.0.0-SNAPSHOT@aar'
-    compile files('libs/mpandroidchartlibrary-2-1-6.jar'
-    )
+    compile files('libs/mpandroidchartlibrary-2-1-6.jar')
 }
